[workspace]

members = [
    "analyser",
    "assembler",
    "gif-renderer",
    "graphical-frontend",
    "ines",
    "model",
    "nes-specs",
    "nes-emulator",
    "nes-headless-frame",
    "nes-name-table-debug",
    "nes-palette",
    "nes-samples",
    "samples",
    "butterfly",
    "conway",
]
