[workspace]

members = [
    "analyser",
    "assembler",
    "gif-renderer",
    "graphical-frontend",
    "ines",
    "model",
    "nes-specs",
    "nes-emulator",
    "nes-emulator-core",
    "nes-headless-frame",
    "nes-name-table-debug",
    "nes-render-output",
    "nes-palette",
    "nes-samples",
    "samples",
    "butterfly",
    "conway",
    "tetris-analyser",
    "tetris-hard-drop-patcher",
]
