[package]
name = "conway-nes"
description = "Generate a NES rom containing Conway's Game of Life"
version = "0.1.1"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/stevebob/mos6502/-/tree/master/conway"
repository = "https://gitlab.com/stevebob/mos6502.git"

[dependencies]
env_logger = "0.8"
mos6502_assembler = { version = "0.2", path = "../assembler" }
mos6502_model = { version = "0.2", path = "../model" }
ines = { version = "0.2", path = "../ines" }
