[package]
name = "gif_renderer"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[features]
background_pixel_ages = ["nes_headless_frame/background_pixel_ages"]

[dependencies]
nes_headless_frame = { path = "../nes-headless-frame" }
nes_specs = { path = "../nes-specs" }
nes_palette = { path = "../nes-palette" }
nes_name_table_debug = { path = "../nes-name-table-debug" }
gif = "0.11"
