[package]
name = "graphical_frontend"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[dependencies]
pixels = "0.11"
winit = "0.27"
nes_specs = { path = "../nes-specs" }
nes_palette = { path = "../nes-palette" }
nes_render_output = { path = "../nes-render-output" }
