[package]
name = "graphical_frontend"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[dependencies]
glutin = "0.21"
gfx_window_glutin = "0.31"
gfx_device_gl = "0.16"
gfx = "0.18"
nes_specs = { path = "../nes_specs" }
nes_palette = { path = "../nes_palette" }

[[example]]
name = "test_pattern"
