[package]
name = "ines"
description = "Library for reading and writing NES roms encoded in the INES format"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
edition = "2018"
homepage = "https://gitlab.com/stevebob/mos6502.git"
repository = "https://gitlab.com/stevebob/mos6502.git"
documentation = "https://docs.rs/ines"

[dependencies]
