[package]
name = "mos6502_model"
description = "MOS6502 hardware model"
version = "0.2.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
edition = "2018"
homepage = "https://gitlab.com/stevebob/mos6502.git"
repository = "https://gitlab.com/stevebob/mos6502.git"
documentation = "https://docs.rs/mos6502_model"

[features]
serialize = ["serde"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"], optional = true }
log = "0.4"
