[package]
name = "nes-samples"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[dependencies]
assembler = { path = "../assembler" }
mos6502 = { path = "../mos6502" }
nes = { path = "../nes" }
ines = { path = "../ines" }
samples = { path = "../samples" }

[[example]]
name = "counter"

[[example]]
name = "infinite_loop"

[[example]]
name = "jump_indirect"

[[example]]
name = "load_accumulator_immediate"

[[example]]
name = "load_and_store_all_addressing_modes"

[[example]]
name = "memory_operations"

[[example]]
name = "software_interrupt"

[[example]]
name = "stack_basic"

[[example]]
name = "stack_status_register"

[[example]]
name = "store_accumulator"
