[package]
name = "nes_samples"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[dependencies]
mos6502_assembler = { path = "../assembler" }
mos6502_model = { path = "../model" }
ines = { path = "../ines" }
samples = { path = "../samples" }

[[example]]
name = "counter"

[[example]]
name = "factorial"

[[example]]
name = "infinite_loop"

[[example]]
name = "jump_indirect"

[[example]]
name = "load_accumulator_immediate"

[[example]]
name = "load_and_store_all_addressing_modes"

[[example]]
name = "memory_operations"

[[example]]
name = "software_interrupt"

[[example]]
name = "stack_basic"

[[example]]
name = "stack_status_register"

[[example]]
name = "store_accumulator"

[[example]]
name = "wide_factorial"
