[package]
name = "nes_emulator"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[dependencies]
simon = "0.2"
mos6502 = { path = "../mos6502" }
ines = { path = "../ines" }
nes_specs = { path = "../nes_specs" }
analyser = { path = "../analyser" }
glutin_frontend = { path = "../glutin_frontend" }
gif_renderer = { path = "../gif_renderer" }
serde = { version = "1.0", features = ["serde_derive"] }
serde-big-array = "0.1"
bincode = "1.1"
nes_headless_frame = { path = "../nes_headless_frame" }
