[package]
name = "tetris-analyser"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[dependencies]
meap = "0.4"
ines = { version = "0.1", path = "../ines" }
nes_emulator_core = { path = "../nes-emulator-core" }
nes_render_output = { path = "../nes-render-output" }
gif_renderer = { path = "../gif-renderer" }
