[package]
name = "tetris-analyser"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[dependencies]
meap = "0.5"
ines = { path = "../ines" }
nes_emulator_core = { path = "../nes-emulator-core" }
nes_render_output = { path = "../nes-render-output" }
gif_renderer = { path = "../gif-renderer" }
mos6502_model = { path = "../model" }
analyser = { path = "../analyser" }
