[package]
name = "nes-tetris-hard-drop-patcher"
description = "Tool for modifying the NES Tetris rom to support hard drop"
version = "0.1.1"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/stevebob/mos6502/-/tree/master/tetris-hard-drop-patcher"
repository = "https://gitlab.com/stevebob/mos6502.git"

[dependencies]
env_logger = "0.8"
log = "0.4"
ines = { version = "0.2", path = "../ines" }
mos6502_model = { version = "0.2", path = "../model" }
mos6502_assembler = { version = "0.2", path = "../assembler" }
